[tool.poetry]
name = "fastapi workshop"
version = "0.1.0"
description = ""
authors = ["riikkayoki <74421508+riikkayoki@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.15.5"
fastapi = "^0.87.0"
pydantic = "^1.10.2"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
