[tool.poetry]
name = "fastapi-workshop"
version = "0.1.0"
description = ""
authors = ["riikkayoki <74421508+riikkayoki@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fastapi_workshop"}]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.15.6"
pytest = "^7.2.0"
fastapi = "^0.87.0"
invoke = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
